# Furito-Back

./: Cargo.toml
.github/workflows/: deploy_prod.yml  deploy_staging.yml
src/: main.rs  prelude.rs  register_routes.rs
src/routes/: login.rs  register.rs
src/schemas/: posts.sql
src/structs/: auth_struct.rs  mod.rs  register_struct.rs
src/utils/: mod.rs  schema.sql  setup_db.rs  structs.rs
