[package]
name = "furito-back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
http = "1.1.0"
dotenv = "0.15.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
